--- a/opflix/android/app/src/main/res/values/styles.xml
+++ b/opflix/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">
+            @drawable/background_splash
+        </item>
         <item name="android:textColor">#000000</item>
     </style>
 
